crates/swc_ecma_parser/tests/jsx/errors/unterminated-string/input.js.stderr
error: Unexpected eof
 --> $DIR/tests/jsx/errors/unterminated-string/input.js:1:12
  |
1 | <foo bar="
  |            ^

error: Unterminated string constant
 --> $DIR/tests/jsx/errors/unterminated-string/input.js:1:10
  |
1 | <foo bar="
  |          ^^

